Infra/SecurityGroups.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Security groups for EC2 instances and ALB 

Resources:
  # ------------ ALB Security Group ------------
  LBSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ALB Security Group
      VpcId: !ImportValue VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: LBSecGroup

  # ------------ EC2 Instance Security Group ------------
  BastionSecurityGroup: # Security Group For the Public instance to accept all the connection
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: BastionHostSG
      GroupDescription: Allow SSH access to bastion host
      VpcId: !ImportValue VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0 # Restrict to your IP in production
      Tags:
        - Key: Name
          Value: BastionHostSG
  # ------------ Private EC2 Instance Security Group ------------
  WebServerSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for EC2 instances
      VpcId: !ImportValue VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref LBSecGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref BastionSecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: WebServerSecGroup
    DependsOn:
      - LBSecGroup
      - BastionSecurityGroup
Outputs:
  LBSecGroup:
    Description: Security Group ID for ALB
    Value: !Ref LBSecGroup
    Export:
      Name: LBSecGroupId

  WebServerSecGroupId:
    Description: Security Group ID for EC2 instances
    Value: !Ref WebServerSecGroup
    Export:
      Name: WebServerSecGroupId

  BastionSecurityGroupId:
    Description: Security Group ID for EC2 instances
    Value: !Ref BastionSecurityGroup
    Export:
      Name: BastionSecurityGroupId
